--- a/challenge1.html
+++ b/challenge1.html
@@ -7,6 +7,7 @@
             margin-left: auto;
             margin-right: auto;
             width: 50% ;
+            filter: contrast(20%);
         }
     </style>
     <meta charset="UTF-8">
