added filter and border radius to an image

--- a/challenge1.html
+++ b/challenge1.html
@@ -8,6 +8,7 @@
             margin-right: auto;
             width: 50% ;
             filter: contrast(20%);
+            border-radius: 15%;
         }
     </style>
     <meta charset="UTF-8">
