Change font color

--- a/challenge3.html
+++ b/challenge3.html
@@ -4,13 +4,15 @@
     <style>
         table,th,td{
             border:1px solid black;
+        
 
         }
         table{
             border-collapse: collapse;
         }
         th{
-            background-color: blue
+            background-color: blue;
+            color:white
         }
     </style>
     <meta charset="UTF-8">
